# The-Legder-Agentic-Event-Store

./: .cursorignore  .env.example  .gitignore  DESIGN.md  DOMAIN_NOTES.md  README.md  The_Ledger__Guided_Tour_via_MCP.md  docker-compose.yml  llm_probe.py  pyproject.toml
.cursor/rules/: coding_preference.mdc  my-stack.mdc  specify-rules.mdc  workflow_preferences.mdc
.specify/memory/: constitution.md
.specstory/history/: 2026-03-16_18-33Z-trp1-week-5-challenge-constitution.md  2026-03-17_08-16Z-governance-infrastructure-project-implementation.md
dashboard/: _helpers.py  app.py  theme.css
scripts/: generate_api_cost_report.py  generate_regulatory_package_artifact.py  generate_rubric_narrative_from_db.py  generate_week5_artifacts.py  phase2_demo.py  query_history.py  run_agents_stepwise.ps1  run_compliance_agent.py  run_credit_agent.py  run_decision_agent.py  run_document_agent.py  run_fraud_agent.py  run_migrations.py  run_src_pipeline.py  seed_demo_application.py  seed_from_jsonl.py  simulate_concurrency.py  start_projection_daemon.py  verify_schema.py  what_if_demo.py  write_narrative_test_results.py
specs/001-ledger-event-store/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  event_store.py  schema.sql
src/agents/: __init__.py  base_agent.py  compliance_agent.py  credit_analysis_agent.py  decision_orchestrator_agent.py  document_processing_agent.py  fraud_detection_agent.py
src/aggregates/: agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
src/commands/: handlers.py
src/db/: pool.py
src/integrity/: audit_chain.py  gas_town.py
src/llm/: __init__.py  client.py
src/mcp/: resources.py  server.py  tools.py
src/models/: events.py  exceptions.py
src/outbox/: __init__.py  daemon.py  publisher.py
src/projections/: agent_performance.py  application_summary.py  compliance_audit.py  daemon.py
src/registry/: __init__.py  client.py
starter/: __init__.py
tests/: conftest.py  test_concurrency.py  test_domain.py  test_event_store_canonical_append.py  test_gas_town.py  test_gas_town_week5.py  test_mcp_lifecycle.py  test_narratives.py  test_outbox_publisher.py  test_projections.py  test_regulatory.py  test_upcasting.py  test_what_if.py
(+10 files in other folders)
